objects/Custom_Report_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Attribute signifying what business unit the record applies to</description>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <description>Name of the Market/ Branch area within a specific managed region</description>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Mkt_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of the specific Market/ Branch</description>
        <label>Branch Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The user must be an Active Salesforce licensed User</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Report_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Reg_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Region Manager User lookup</description>
        <label>Region Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The user must be an Active Salesforce licensed User</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Report_Configs_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Custom VF Reporting access and hierarchy viewing management</description>
    <label>Custom Report Hierarchy</label>
    <nameField>
        <displayFormat>CRH-{0000000}</displayFormat>
        <label>Custom Report Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Report Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market_Name__c</columns>
        <columns>User_Mkt_Mgr__c</columns>
        <columns>User_Reg_Mgr__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Record Type for Custom Report Config</description>
        <label>Default</label>
    </recordTypes>
</CustomObject>